# leader_follower

./: .gitignore  README.md  colcon_and_run  gtest_lcov  listen_for_input_request  pytest.ini  run_sim  setup.cfg  venv_activate
src/sim_launch/: package.xml  setup.py
src/sim_launch/launch/: sim_launch.py
src/turtle2/: CMakeLists.txt  package.xml
src/turtle2/src/: main.cpp  turtle2.cpp  turtle2.hpp
src/turtle2/test/: test_turtle2.cpp
src/turtle_control/: package.xml  setup.py
src/turtle_control/test/: test_follower.py  test_leader.py
src/turtle_control/turtle_control/: follower.py  input_service.py  leader.py  turtle1.py
